@@ -175,7 +175,7 @@ contributors who answered questions on the mailing list, found
 bugs, helped in porting to new architectures, wrote some code,
 contributed in some way or another at some stage, follows:
 \begin{quote}
-  Dario Alf\`e, Audrius Alkauskas, Alain Allouche, Francesco Antoniella,
+  Audrius Alkauskas, Alain Allouche, Francesco Antoniella,
   Uli Aschauer,  Francesca Baletto, Gerardo Ballabio, Mauro Boero, 
   Claudia Bungaro, Paolo Cazzato, Gabriele Cipriani, Jiayu Dai,
   Cesar Da Silva, Alberto Debernardi, Gernot Deinzer,
